# mate-indicator-applet

./: .build.yml  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  index.html  libtool  makepot  mate-indicator-applet.pot
.github/workflows/: archlinux.sh  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config  config_20221028215442.bak
2020-06-22-162728-2181-cppcheck@9e512823070d_travis-ci/: stats.html
2020-07-06-000331-2607-cppcheck@418dae76ea9e_master/: 0.html  index.html
2020-08-20-160620-0353-cppcheck@fb7b816f4a78_master/: 0.html  index.html  stats.html
2020-11-16-162302-5116-cppcheck@5fc322d26c85_USE_MATE2_MACROS/: 0.html  stats.html
2020-12-09-074436-2078-cppcheck@4c606290f9a0_master/: index.html
2020-12-29-143045-9052-cppcheck@8a959f452cee_master/: stats.html
2021-02-22-225725-0240-cppcheck@24b898a0111f_master/: index.html
2021-04-24-225231-0061-cppcheck@9971c97b5889_master/: 0.html
2021-05-30-124445-8034-cppcheck@dfc13f9fbb3a_secondary-activate/: 0.html
2021-08-08-214944-2244-cppcheck@7abc48e094fa_master/: 0.html  index.html  stats.html
2021-11-10-055516-4410-cppcheck@4a2c0e82a075_master/: index.html
2021-11-20-205656-2651-cppcheck@42e8a0e39a1f_master/: 0.html
2021-11-20-205807-3444-cppcheck@8f9ca2537035_master/: index.html
2022-02-13-182412-3485-cppcheck@ed5cb09d01f5_master/: 0.html  1.html  2.html  stats.html
2022-06-01-142634-1655-cppcheck@55263b56a34f_configure_220601/: 1.html
2022-10-29-135419-7766-cppcheck@f87bba21512a_master/: 0.html  2.html  stats.html
2022-11-11-201701-1965-cppcheck@ef7141029a7f_v1.27.0/: index.html
2023-03-30-113734-7933-cppcheck@18b7944b9b2f_master/: 0.html  1.html  2.html
2023-09-16-124844-6605-cppcheck@19a7f97f7212_master/: 0.html  1.html  2.html  index.html  stats.html
2024-01-23-164917-9428-cppcheck@12ff6a24154d_master/: 0.html  4.html
2024-02-22-175338-8105-cppcheck@33c9665957c1_master/: 1.html
2024-02-22-175637-9754-cppcheck@33c9665957c1_v1.28.0/: 2.html  3.html  index.html  stats.html
data/: Makefile  Makefile.am  Makefile.in  org.ayatana.panel.FastUserSwitchApplet.mate-panel-applet.in.in  org.ayatana.panel.IndicatorApplet.mate-panel-applet.in.in  org.ayatana.panel.IndicatorAppletAppmenu.mate-panel-applet.in.in  org.ayatana.panel.IndicatorAppletComplete.mate-panel-applet.in.in  org.mate.panel.applet.FastUserSwitchAppletFactory.service.in  org.mate.panel.applet.IndicatorAppletAppmenuFactory.service.in  org.mate.panel.applet.IndicatorAppletCompleteFactory.service.in  org.mate.panel.applet.IndicatorAppletFactory.service.in
distro/linuxmint/: build.sh
distro/linuxmint/debian/: changelog  control  copyright  rules
po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  af.gmo  af.po  am.gmo  am.po  an.gmo  an.po  ar.gmo  ar.po  ar_AE.po  as.po  ast.gmo  ast.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.po  bqi.po  br.gmo  br.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  cmn.po  crh.gmo  crh.po  cs.gmo  (+237 more)
src/: Makefile  Makefile.am  Makefile.in  applet-main.c  eggaccelerators.c  eggaccelerators.h  tomboykeybinder.c  tomboykeybinder.h
src/.deps/: indicator_applet-applet-main.Po  indicator_applet-eggaccelerators.Po  indicator_applet-tomboykeybinder.Po  indicator_applet_appmenu-applet-main.Po  indicator_applet_appmenu-eggaccelerators.Po  indicator_applet_appmenu-tomboykeybinder.Po  indicator_applet_complete-applet-main.Po  indicator_applet_complete-eggaccelerators.Po  indicator_applet_complete-tomboykeybinder.Po  indicator_applet_session-applet-main.Po  indicator_applet_session-eggaccelerators.Po  indicator_applet_session-tomboykeybinder.Po
